# ROS_workspace

./: .gitignore  README.md  trajectory.npy
src/gazebo_world/: CMakeLists.txt  package.xml
src/gazebo_world/launch/: create_world.launch  population.launch  test.launch  test_world.launch
src/gazebo_world/worlds/: dem.world  test.world  test2_world.world  test_world.world
src/kinematics/: package.xml
src/kinematics/src/: feedback_control.py  open_loop.py  position.py  rotate_can.py  rotate_robot.py  rotations.py  rotations_conversion.py  setup_table.py  utilities.py
src/my_pkg/: CMakeLists.txt  package.xml
src/my_pkg/launch/: test.launch  topicTest.launch
src/my_pkg/src/: publisher.py  serviceClient.py  serviceServer.py  subscriber.py  topicPublisher.py  topicSubscriber.py
src/project01/: CMakeLists.txt  package.xml
src/project01/launch/: rviz.launch  spawn.launch  test_world.launch
src/project01/src/: autonomous.py  move.py  obstacle_plugin.cc  position.py  utilities.py
src/project01/urdf/: robot.gazebo  robot.xacro
src/project01/worlds/: map.world
src/robot_description/: package.xml
src/robot_description/config/: robot_control.yaml
src/robot_description/launch/: empty_world.launch  robot_control.launch  rviz.launch  spawn.launch  world.launch
src/robot_description/rviz/: model.rviz
src/robot_description/src/: cmd_pub.py  control.py  laser_sub.py  wheelMove.py
src/robot_description/urdf/: robot.gazebo  robot.urdf  robot.xacro
src/teleop_pkg/: CMakeLists.txt  package.xml
src/writing_plugins/: CMakeLists.txt  package.xml
(+6 files in other folders)
